# usefule-web

./: .gitignore  README.md  agents.md  index.html  package.json  pnpm-lock.yaml  web1.html  web2.html
apps/portal/: index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/portal/src/: App.tsx  styles.css
apps/portal/src/components/: AppHeader.tsx  Breadcrumbs.tsx  Layout.tsx  StatusToaster.tsx  SubPageLayout.tsx
apps/portal/src/data/: photoResources.ts
apps/portal/src/pages/: PhotoPage.tsx  PhotoPracticeHub.tsx  PortalHome.tsx  PortalPage.tsx  TravelChecklist.tsx  TravelPage.tsx
apps/portal/src/utils/: navigation.ts  openExternal.ts  storage.ts
docs/: README.md  codex-notes.md  local-setup.md
scripts/: web1.js  web2.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
styles/: common.css  index.css  web1.css  web2.css
