[package]
name = "usefule-web"
version = "0.1.0"
edition = "2021"
description = "Useful Web desktop portal"
authors = ["Usefule Team"]
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["shell-open"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
