[package]
name = "useful-web"
version = "0.1.0"
edition = "2021"

[build-dependencies]
crc32fast = "1"
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
